@@ -2394,6 +2394,27 @@ class NNGroupNode(NNTreeNode):
         """
         return self._nn_interface._get_all(self, name, max_depth=max_depth)
 
+    def f_get_default(self, name, default=None, fast_access=False, backwards_search=False,
+              shortcuts=True, max_depth=None, auto_load=False):
+        """ Similar to `f_get`, but returns the default value if `name` is not found in the
+        trajectory.
+
+        This function uses the `f_get` method and will return the default value
+        in case `f_get` raises an AttributeError or a DataNotInStorageError.
+        Other errors are not handled.
+
+
+        """
+        try:
+            return self.f_get(name, fast_access=fast_access,
+                           backwards_search=backwards_search,
+                           shortcuts=shortcuts,
+                           max_depth=max_depth,
+                           auto_load=auto_load)
+
+        except (AttributeError, pex.DataNotInStorageError):
+            return default
+
     def f_get(self, name, fast_access=False, backwards_search=False,
               shortcuts=True, max_depth=None, auto_load=False):
         """Searches and returns an item (parameter/result/group node) with the given `name`.
